# SDU_Algo_and_Data_course_solutions

./: README.txt  build_and_run.sh  gmon.out
L1/: CMakeLists.txt  main.cpp
L1/lib/: CMakeLists.txt  Lib.cpp  Lib.h  time_measurement.h
L2/: CMakeLists.txt  analysis.txt  main.cpp
L2/lib/: CMakeLists.txt  Lib.cpp  Lib.h  Queue.h  Singly_linked_list.h  Stack.cpp  Stack.h
L3/: CMakeLists.txt  analysis.txt  main.cpp
L3/lib/: CMakeLists.txt  Lib.cpp  Lib.h  balls.cpp  balls.h  crappy_hashmap.h
L4/: Ex1.py  Ex2.py  Ex3.py  Ex4.py  Ex5.py  analysis.txt  fill_tree_from_array.py  gmon.out  main.cpp
L4/lib/: CMakeLists.txt  Lib.cpp
L5/: CMakeLists.txt  analysis.txt  main.cpp
L5/lib/: CMakeLists.txt  Lib.cpp  Lib.h  anagram_check.cpp  anagram_check.h  is_sum_present.cpp  is_sum_present.h
L7/: analysis.txt  main.cpp
L7/lib/: BinarySearchTree.cpp  BinarySearchTree.h  CMakeLists.txt  Lib.cpp  Lib.h
